# cassida

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHILOSOPHY.md  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: docs.yml  e2e.yml  rust.yml  swc-core-drift.yml
docs/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
docs/public/: preflight.css
docs/scripts/: build-property-manifest.ts
docs/src/: main.tsx  routes.tsx
docs/src/components/: Code.tsx  LangSwitch.tsx  Layout.tsx  PropertyTable.tsx
docs/src/lib/: locale.ts  mdn.ts
docs/src/pages/: Cas.tsx  Conditional.tsx  Config.tsx  ExistingCss.tsx  GlobalCss.tsx  Glossary.tsx  HoverFix.tsx  Install.tsx  Landing.tsx  Modifiers.tsx  NextPlugin.tsx  NextSetup.tsx  Philosophy.tsx  Print.tsx  Recommended.tsx  RedirectIndex.tsx  Registry.tsx  Responsive.tsx  SwcPlugin.tsx  Theming.tsx  Unsafe.tsx
e2e/: README.md  run-local.sh
e2e/consumer/: index.html  package.json  tsconfig.json  vite.config.ts
e2e/consumer/scripts/: assert.mjs
e2e/consumer/src/: App.tsx
e2e/next-app/: .gitignore  next.config.mjs  package.json  tsconfig.json
e2e/next-app/app/: layout.tsx  page.tsx  server-only.tsx
e2e/next-app/scripts/: assert.mjs
examples/playground/: cassida.config.json  fss.config.json  index.html  package.json  tsconfig.json  vite.config.ts
examples/playground/src/: App.tsx  tokens.ts
scripts/: check-swc-core-drift.mjs
