[workspace]
resolver = "2"
members = ["packages/swc-plugin", "packages/swc-plugin-next"]

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/pishio/cassida"

[workspace.dependencies]
swc_core = { version = "=66.0.3", features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_utils",
  "ecma_plugin_transform",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
